--- a/resources/assets/sass/components/_duplo.scss
+++ b/resources/assets/sass/components/_duplo.scss
@@ -318,15 +318,29 @@
     }
   }
 
-  [m-Duplo="2"],
+  [m-Duplo="2"] {
+    height: 300px;
+    height: 30vh;
+    @include grid-col(12,0);
+
+    h2 {
+      font-size: em(22);
+      margin-bottom: 0;
+    }
+
+    p {
+      display: none;
+    }
+  }
+
   [m-Duplo="3"],
   [m-Duplo="4"] {
     height: 300px;
     height: 30vh;
-    @include grid-col(4,0);
+    @include grid-col(6,0);
 
     h2 {
-      font-size: em(22);
+      font-size: em(18);
       margin-bottom: 0;
     }
 
