--- a/resources/assets/sass/components/_modal.scss
+++ b/resources/assets/sass/components/_modal.scss
@@ -77,3 +77,8 @@
     margin-bottom: 0;
   }
 }
+
+#videoPlayerReveal {
+  height: auto;
+  min-height: initial;
+}
